--- a/cardinal-mockup/package.json
+++ b/cardinal-mockup/package.json
@@ -2,6 +2,7 @@
   "name": "cardinal-mockup",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://aolaleye.github.io/developer-coding-evaluation",
   "dependencies": {
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
@@ -17,6 +18,11 @@
     "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.2.0"
   }
 }
